Fixed centring of images and spacing issue caused by lack of container class

--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ p {
 .content h3 {
   font-size: 24px;
   line-height: 1.5;
-  margin: 20px 0 0;
+
   font-family: var(--default-font-family);
 }
 .content p {
@@ -102,7 +102,7 @@ p {
   .hero {
     padding: 80px 20px;
   }
-  .content-container {
+  .content {
     text-align: center;
     padding: 0;
   }
